# smol

./: .buildinfo  .coverage  .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGES.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  citing.html  cluster_probability_analysis.py  environment.yaml  environment.yml  examples  examples.html  genindex.html  getting_started.html  getting_started.ipynb  getting_started.py  index.html  new_ce_test.py  objects.inv  old_ce_test.py  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements-optional.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  test_push_file  user_guide.html
.circleci/: config.yml
.doctrees/: citing.doctree  environment.pickle  examples.doctree  getting_started.doctree  index.doctree  user_guide.doctree
.doctrees/api_reference/: constants.doctree  exceptions.doctree  index.doctree  io.doctree  utils.doctree
.doctrees/developer_guide/: design.doctree  guide.doctree  guidelines.doctree  index.doctree
.doctrees/notebooks/: adding-structures-in-parallel.doctree  advanced-mc-settings.doctree  ce-fit-w-centering.doctree  choosing-site-basis-sets.doctree  cluster-visualization.doctree  creating-a-ce-w-electrostatics.doctree  creating-a-ce.doctree  finding-groundstates.doctree  generating-sqs.doctree  index.doctree  lmo-drx-ce-mc.doctree  openmp-parallelism.doctree  running-canonical-mc.doctree  running-charge-balanced-gcmc.doctree  running-ewald-sim_anneal.doctree  running-semigrand-mc.doctree  setting-composition-constraints.doctree  training-data-preparation.doctree  wang-landau-ising.doctree
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  code_review.md  feature_request.md  feature_request.yml
.github/workflows/: build.yml  docs.yml  draft-pdf.yml  lint.yml  release.yml  test.yml  update-precommit.yaml  update-precommit.yml
.mypy_cache/3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  _random.data.json  _random.meta.json  _thread.data.json  _thread.meta.json  _warnings.data.json  _warnings.meta.json  _weakref.data.json  _weakref.meta.json  _weakrefset.data.json  _weakrefset.meta.json  abc.data.json  abc.meta.json  argparse.data.json  argparse.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  atexit.data.json  atexit.meta.json  base64.data.json  base64.meta.json  bdb.data.json  bdb.meta.json  binascii.data.json  binascii.meta.json  bisect.data.json  bisect.meta.json  builtins.data.json  builtins.meta.json  cmd.data.json  cmd.meta.json  codecs.data.json  codecs.meta.json  (+124 more)
_modules/: index.html
_modules/cofe/: expansion.html
_modules/moca/: ensemble.html  sublattice.html
_modules/smol/: io.html
_static/: documentation_options.js
api_reference/: constants.html  exceptions.html  index.html  io.html  utils.html
api_reference/autogen/: cofe.extern.html  cofe.html  cofe.space.html  cofe.wrangling.html  moca.ensemble.html  moca.html  (+3 more)
binder/: postBuild  requirements.txt
developer_guide/: design.html  guide.html  guidelines.html  index.html
docs/: requirements.txt
examples/: 1-1-creating-a-ce-w-electrostatics.ipynb  1-creating-a-ce.ipynb  2-1-running-semigrand-mc.ipynb  2-2-running-ewald-sim_anneal.ipynb  2-running-canonical-mc.ipynb  3-training-data-preparation.ipynb  adding-structures-in-parallel.ipynb  basic_ce.mson  basic_ce_ewald.mson  basis-orthogonalization.ipynb  cluster-visualization.ipynb  creating-a-ce-w-electrostatics.ipynb  creating-a-ce.ipynb  optimization_LMTO_Bayes.ipynb  optimization_module_LMTO.ipynb  optimization_module_in_CE.ipynb  running-canonical-mc.ipynb  running-ewald-sim_anneal.ipynb  running-semigrand-mc.ipynb  training-data-preparation.ipynb  translating-pyabinitio-work.ipynb  using-monte-carlo.ipynb
notebooks/: 1-1-creating-a-ce-w-electrostatics.html  1-creating-a-ce.html  2-1-running-semigrand-mc.html  2-2-running-ewald-sim_anneal.html  2-2-running-ewald-sim_anneal.ipynb  2-running-canonical-mc.html  3-training-data-preparation.html  4-adding-structures-in-parallel.html  adding-structures-in-parallel.html  advanced-mc-settings.html  basis-orthogonalization.html  basis-orthogonalization.ipynb  ce-fit-w-centering.html  ce-fit-w-centering.ipynb  choosing-site-basis-sets.html  choosing-site-basis-sets.ipynb  cluster-visualization.html  cluster-visualization.ipynb  creating-a-ce-w-electrostatics.html  creating-a-ce.html  creating-a-ce.ipynb  developing.html  finding-groundstates.html  finding-groundstates.ipynb  generating-sqs.html  generating-sqs.ipynb  index.html  index.ipynb  lmo-drx-ce-mc.html  lmo-drx-ce-mc.ipynb  openmp-parallelism.html  running-canonical-mc.html  running-canonical-mc.ipynb  running-charge-balanced-gcmc.html  running-ewald-sim_anneal.html  running-ewald-sim_anneal.ipynb  running-semigrand-mc.html  setting-composition-constraints.html  setting-composition-constraints.ipynb  training-data-preparation.html  (+2 more)
optimization/: adds_on.py  ce_opt.py  ce_sparse_opt.py
paper/: paper.bib  paper.md
smol/: __init__.py  _math.py  _utils.py  constants.py  correlations.c  correlations.cp39-win_amd64.pyd  correlations.pyx  exceptions.py  globals.py  io.py  utils.py
src/: ce_utils.c  ce_utils.pyx  cemc_utils.c  cemc_utils.pyx  mc_utils.c  mc_utils.html  mc_utils.pyx  orbit_list.html
tests/: .test_durations  __init__.py  conftest.py  pytest.ini  test_io.py  test_utils.py  utils.py
tools/: build_helpers.py
user_guide/: index.html
(+971 files in other folders)
