[metadata]
name  =  smol
version  =  attr: smol.__version__
author  =  Luis Barroso-Luque
author_email  =  lbluque@berkeley.edu
maintainer = Luis Barroso-Luque
maintainer_email = lbluque@berkeley.edu
url = https://cedergrouphub.github.io/smol
license = Modified BSD
license_file = LICENSE
description =
    Lighthweight but caffeinated Python implementation of computational methods for statistical mechanical calculations of configurational states in crystalline material systems.
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Chemistry
    Topic :: Software Development :: Libraries :: Python Modules
project_urls =
    Documentation = https://cedergrouphub.github.io/smol
    Code = https://github.com/CederGroupHub/smol
    Issue tracker = https://github.com/CederGroupHub/smol/issues

[options]
packages = find:
python_requires = >=3.8
setup_requires = numpy>=1.20; setuptools; setuptools_scm
install_requires =
    setuptools
    numpy >=1.23
    pymatgen >=2022.3.24
    monty >=3.0.1

[options.extras_require]
docs =
    sphinx >= 5.3
    pydata-sphinx-theme >=0.12.0
    ipython >=8.2.0
    nbsphinx >=0.8.10
    nbsphinx-link >=1.3.0
    nb2plots >=0.6.1
tests =
    pytest >=7.2.0
    pytest-cov >=4.0.0
    scikit-learn >=1.1.2
    h5py >=3.6.0
    coverage
    polytope
    cvxpy
dev =
    pre-commit >=2.12.1
    cython >=0.29.32
    flake8
    pycodestyle
    pydocstyle
    pylint
    black
    isort
optional =
    scikit-learn >=1.1.2
    h5py >=3.6.0
    polytope
    cvxpy
    cvxopt
    gurobipy

[tool:pytest]
addopts  =  -x --durations = 30 --quiet -rxXs --color = yes
filterwarnings  =
    ignore::UserWarning
    ignore::FutureWarning
    ignore::RuntimeWarning

[flake8]
exclude  =  docs,tests
extend-ignore  =  E203, E501
max-line-length  =  88

[pycodestyle]
exclude = docs
count  =  True
statistics  =  True
ignore  =  E203, W503
max-line-length  =  88

[pylint.basic]
good-names  =  id, kB, i, j, k, f

[pylint.messages control]
disable  =  W0511, R0904, R0903, R0913, R0902, R0914, C0415,

[codespell]
skip = *.c,./.*
count =
quiet-level = 3
ignore-words-list = nd,tread
